[gd_scene load_steps=2 format=2]

[ext_resource path="res://components/interacting_area/interacting_area.gd" type="Script" id=1]

[node name="InteractingArea" type="Area2D"]
monitorable = false
collision_layer = 0
collision_mask = 32
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
